# Gestion-de-stock

./: .env  .gitignore  AGENTS.md  Caddyfile  GestionStockPro.spec  LICENSE  README.md  REVIEW.md  build_exe.py  gestion_stock.py  requirements.txt  run_backend.sh  run_frontend.sh  setup.py
backend/: .gitignore  app.py  backend.py  config.example.ini  config.ini  requirements.txt  sitecustomize.py  system_config.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
docs/: 2fa.md  ari_prompt.md  deployment-caddy.md  editable-layout.md  feature_suggestions.md  layout-rollout-checklist.md  layout-rules.md  logging.md  multi-db-sites.md  pdf-studio.md  security-2fa.md  spellcheck.md  stability.md
frontend/: .env.production  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
gestion_stock/: __init__.py  __main__.py  clothing_inventory.py  pharmacy_inventory.py
scripts/: build_all.ps1  dev.ps1  dev.py  provision_sites.py  purge_logs.py  run_backend.py  run_frontend.py  update_repo.py
shared/: voice_commands.json
tests/: conftest.py  test_alerts.py  test_ari.py  test_ari_module.py  test_ari_permissions.py  test_backup_manager.py  test_barcode_export.py  test_cli.py  test_db_migrations.py  test_inventory.py  test_logging_config.py  test_order_suggestions_supplier_resolution.py  test_orders_email_send.py  test_pharmacy_items_supplier_column.py  test_pharmacy_schema.py  test_pharmacy_supplier_link.py  test_system_bootstrap.py  (+2 more)
(+297 files in other folders)
