[package]
name = "gestion-stock-pro"
version = "0.1.0"
edition = "2021"
description = "Client desktop pour Gestion Stock Pro"
authors = ["Gestion Stock Pro"]

[dependencies]
tauri = { version = "1.5", features = ["shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
